# MBot-GameHouse-Cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  DatabaseEntities.hpp  HelperFunctions.hpp  License  MBot-GameHouse-Cpp.rc  PropertySheet.props  ReadMe.md  main - Copy.cpp  main.cpp  resource.h
CMake/: FindCurl.cmake  FindFFMPEG.cmake  FindGlib.cmake  FindLibz.cmake  FindOpenSSL.cmake  FindOpus.cmake  FindSodium.cmake  FindVCPKGRootDir.cmake
Commands/: AddShopItem.hpp  AddShopRole.hpp  Balance.hpp  Blackjack.hpp  BotInfo.hpp  Buy.hpp  CasinoStats.hpp  Coinflip.hpp  CommandsList.hpp  Deposit.hpp  Disconnect.hpp  DisplayGuildsData.hpp  Duel.hpp  GamehouseOptions.hpp  Help.hpp  HelperFunctions.hpp  Inventory.hpp  Leaderboard.hpp  Nuke.hpp  RegisterApplicationCommands.hpp  RemoveObject.hpp  RemoveShopItem.hpp  RemoveShopRole.hpp  Rob.hpp  Roulette.hpp  SellDrugs.hpp  SetBalance.hpp  SetBorderColor.hpp  SetGameChannel.hpp  Shop.hpp  Slots.hpp  StreamAudio.hpp  Test.hpp  Transfer.hpp  Withdraw.hpp
Executable/: CMakeLists.txt
