# Set this value...
set(VCPKG_ROOT_DIR "C:/vcpkg")
# OR this value...
set(CMAKE_CONFIG_FILE_PATH "")
# AND these values.
set(CURL_INCLUDE_DIR "")
set(CURL_RELEASE_ROOT "")
set(CURL_DEBUG_ROOT "")
set(FFMPEG_INCLUDE_DIR "")
set(FFMPEG_RELEASE_ROOT "")
set(FFMPEG_DEBUG_ROOT "")
set(GLIB_INCLUDE_DIR "")
set(GLIB_RELEASE_ROOT "")
set(GLIB_DEBUG_ROOT "")
set(LIBZ_INCLUDE_DIR "")
set(LIBZ_RELEASE_ROOT "")
set(LIBZ_DEBUG_ROOT "")
set(OPENSSL_INCLUDE_DIR "")
set(OPENSSL_RELEASE_ROOT "")
set(OPENSSL_DEBUG_ROOT "")
set(OPUS_INCLUDE_DIR "")
set(OPUS_RELEASE_ROOT "")
set(OPUS_DEBUG_ROOT "")
set(SODIUM_INCLUDE_DIR "")
set(SODIUM_RELEASE_ROOT "")
set(SODIUM_DEBUG_ROOT "")
set(NLOHMANN_INCLUDE_DIR "")

cmake_minimum_required(VERSION 3.22)
project(MBot-GameHouse VERSION 1.00 LANGUAGES CXX)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake;${CMAKE_SOURCE_DIR}/CMake/Find-Scripts")
set(CMAKE_CONFIGURATION_TYPES "${CMAKE_BUILD_TYPE}")

include(GenerateProductVersion)
include(FindCurl)
include(FindFFMPEG)
include(FindGlib)
include(FindIntl)
include(FindLibz)
include(FindOpenSSL)
include(FindOpus)
include(FindSodium)
include(FindNlohmannJson)

if (WIN32)
	set(LIBRARY_SUFFIX ".lib")
	set(LIBRARY_PREFIX "")
elseif(UNIX)
	set(LIBRARY_SUFFIX ".a")
	set(LIBRARY_PREFIX "lib")
endif()

if(NOT VCPKG_ROOT_DIR AND CMAKE_CONFIG_FILE_PATH)
	set(DiscordCoreAPI_DIR "${CMAKE_CONFIG_FILE_PATH}")
	set(LINUX_OK TRUE)
	if (UNIX)	
		if (NOT LIBZ_INCLUDE_DIR OR NOT LIBZ_RELEASE_ROOT OR NOT LIBZ_DEBUG_ROOT)
			set(LINUX_OK FALSE)
		endif()
	endif()
	if (NOT CURL_INCLUDE_DIR OR NOT CURL_RELEASE_ROOT OR NOT CURL_DEBUG_ROOT
		OR NOT FFMPEG_INCLUDE_DIR OR NOT FFMPEG_RELEASE_ROOT OR NOT FFMPEG_DEBUG_ROOT OR NOT GLIB_INCLUDE_DIR
		OR NOT GLIB_RELEASE_ROOT OR NOT GLIB_DEBUG_ROOT OR NOT OPENSSL_INCLUDE_DIR OR NOT OPENSSL_RELEASE_ROOT
		OR NOT OPENSSL_DEBUG_ROOT OR NOT OPUS_INCLUDE_DIR OR NOT OPUS_RELEASE_ROOT OR NOT OPUS_DEBUG_ROOT
		OR NOT SODIUM_INCLUDE_DIR OR NOT SODIUM_RELEASE_ROOT OR NOT SODIUM_DEBUG_ROOT OR NOT NLOHMANN_INCLUDE_DIR OR NOT LINUX_OK)
		
		message(FATAL_ERROR "Sorry - but please set the _DEBUG_ROOT, _RELEASE_ROOT AND _INCLUDE_DIR values in CMakeLists.txt!")
	endif()
elseif(VCPKG_ROOT_DIR)
	if (WIN32)
		include("${VCPKG_ROOT_DIR}/scripts/buildsystems/vcpkg.cmake")
	elseif(UNIX)
		if(DEFINED VCPKG_ROOT_DIR AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
			set(CMAKE_TOOLCHAIN_FILE "${VCPKG_ROOT_DIR}/scripts/buildsystems/vcpkg.cmake" CACHE FILEPATH "The CMake toolchain file.")
			message(STATUS "Found CMake toolchain file: ${CMAKE_TOOLCHAIN_FILE}")
		endif()
	endif()
	set(VCPKG_BASE_DIR "${VCPKG_ROOT_DIR}/installed")
	string(TOLOWER "${CMAKE_HOST_SYSTEM_NAME}" OS_NAME)
	set(VCPKG_INSTALLED_DIR "${VCPKG_BASE_DIR}/x64-${OS_NAME}")
	set(CURL_INCLUDE_DIR "${VCPKG_INSTALLED_DIR}/include")
	set(CURL_RELEASE_ROOT "${VCPKG_INSTALLED_DIR}/lib")
	set(CURL_DEBUG_ROOT "${VCPKG_INSTALLED_DIR}/debug/lib")
	set(FFMPEG_INCLUDE_DIR "${VCPKG_INSTALLED_DIR}/include")
	set(FFMPEG_RELEASE_ROOT "${VCPKG_INSTALLED_DIR}/lib")
	set(FFMPEG_DEBUG_ROOT "${VCPKG_INSTALLED_DIR}/debug/lib")
	set(GLIB_INCLUDE_DIR "${VCPKG_INSTALLED_DIR}/include")
	set(GLIB_RELEASE_ROOT "${VCPKG_INSTALLED_DIR}/lib")
	set(GLIB_DEBUG_ROOT "${VCPKG_INSTALLED_DIR}/debug/lib")
	set(LIBZ_INCLUDE_DIR "${VCPKG_INSTALLED_DIR}/include")
	set(LIBZ_RELEASE_ROOT "${VCPKG_INSTALLED_DIR}/lib")
	set(LIBZ_DEBUG_ROOT "${VCPKG_INSTALLED_DIR}/debug/lib")
	set(OPENSSL_INCLUDE_DIR "${VCPKG_INSTALLED_DIR}/include")
	set(OPENSSL_RELEASE_ROOT "${VCPKG_INSTALLED_DIR}/lib")
	set(OPENSSL_DEBUG_ROOT "${VCPKG_INSTALLED_DIR}/debug/lib")
	set(OPUS_INCLUDE_DIR "${VCPKG_INSTALLED_DIR}/include")
	set(OPUS_RELEASE_ROOT "${VCPKG_INSTALLED_DIR}/lib")
	set(OPUS_DEBUG_ROOT "${VCPKG_INSTALLED_DIR}/debug/lib")
	set(SODIUM_INCLUDE_DIR "${VCPKG_INSTALLED_DIR}/include")
	set(SODIUM_RELEASE_ROOT "${VCPKG_INSTALLED_DIR}/lib")
	set(SODIUM_DEBUG_ROOT "${VCPKG_INSTALLED_DIR}/debug/lib")
	set(NLOHMANN_INCLUDE_DIR "${VCPKG_INSTALLED_DIR}/include")	
else()
	message(FATAL_ERROR "Please, set the VCPKG base directory, or the location of the DiscordCoreAPIConfig.cmake file!")
endif()

add_subdirectory(Executable)
