# Set this value...
set(VCPKG_ROOT_DIR "C:/vcpkg")
# OR this value...
set(CMAKE_CONFIG_FILE_DIR "")
# AND these values.
set(CURL_INCLUDE_DIR "")
set(CURL_RELEASE_ROOT "")
set(CURL_DEBUG_ROOT "")
set(FFMPEG_INCLUDE_DIR "")
set(FFMPEG_RELEASE_ROOT "")
set(FFMPEG_DEBUG_ROOT "")
set(GLIB_INCLUDE_DIR "")
set(GLIB_RELEASE_ROOT "")
set(GLIB_DEBUG_ROOT "")
set(NLOHMANN_INCLUDE_DIR "")
set(OPENSSL_INCLUDE_DIR "")
set(OPENSSL_RELEASE_ROOT "")
set(OPENSSL_DEBUG_ROOT "")
set(OPUS_INCLUDE_DIR "")
set(OPUS_RELEASE_ROOT "")
set(OPUS_DEBUG_ROOT "")
set(SODIUM_INCLUDE_DIR "")
set(SODIUM_RELEASE_ROOT "")
set(SODIUM_DEBUG_ROOT "")

cmake_minimum_required(VERSION 3.20)
project(MBot-GameHouse VERSION 1.00 LANGUAGES CXX)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake;${CMAKE_SOURCE_DIR}/CMake/Find-Scripts")
set(CMAKE_CONFIGURATION_TYPES "${CMAKE_BUILD_TYPE}")

include(CMakePackageConfigHelpers)
include(GenerateProductVersion)
include(FindCurl)
include(FindFFMPEG)
include(FindGlib)
include(FindIntl)
include(FindLibz)
include(FindNlohmannJson)
include(FindOpenSSL)
include(FindOpus)
include(FindSodium)

if(NOT EXISTS "${VCPKG_ROOT_DIR}" AND EXISTS "${CMAKE_CONFIG_FILE_DIR}")
	set(DiscordCoreAPI_DIR "${CMAKE_CONFIG_FILE_DIR}")
	set(LINUX_OK TRUE)
	set(WINDOWS_OK TRUE)
	if (UNIX)
		set(LIBZ_INCLUDE_DIR "${CURL_INCLUDE_DIR}")
		set(LIBZ_RELEASE_ROOT "${CURL_RELEASE_ROOT}")
		set(LIBZ_DEBUG_ROOT "${CURL_DEBUG_ROOT}")
		if (NOT EXISTS "${LIBZ_INCLUDE_DIR}" OR NOT EXISTS "${LIBZ_RELEASE_ROOT}" OR NOT EXISTS "${LIBZ_DEBUG_ROOT}")
			set(LINUX_OK FALSE)
		endif()		
	else()
		set(INTL_INCLUDE_DIR "${GLIB_INCLUDE_DIR}")
		set(INTL_RELEASE_ROOT "${GLIB_RELEASE_ROOT}")
		set(INTL_DEBUG_ROOT "${GLIB_DEBUG_ROOT}")
		if (NOT EXISTS "${INTL_INCLUDE_DIR}" OR NOT EXISTS "${INTL_RELEASE_ROOT}" OR NOT EXISTS "${INTL_DEBUG_ROOT}")
			set(WINDOWS_OK FALSE)
		endif()
	endif()	
	if (NOT EXISTS "${CURL_INCLUDE_DIR}" OR NOT EXISTS "${CURL_RELEASE_ROOT}" OR NOT EXISTS "${CURL_DEBUG_ROOT}"
		OR NOT EXISTS "${FFMPEG_INCLUDE_DIR}" OR NOT EXISTS "${FFMPEG_RELEASE_ROOT}" OR NOT EXISTS "${FFMPEG_DEBUG_ROOT}"
		OR NOT EXISTS "${GLIB_INCLUDE_DIR}" OR NOT EXISTS "${GLIB_RELEASE_ROOT}" OR NOT EXISTS "${GLIB_DEBUG_ROOT}"
		OR NOT EXISTS "${NLOHMANN_INCLUDE_DIR}" 
		OR NOT EXISTS "${OPENSSL_INCLUDE_DIR}" OR NOT EXISTS "${OPENSSL_RELEASE_ROOT}" OR NOT EXISTS "${OPENSSL_DEBUG_ROOT}"
		OR NOT EXISTS "${OPUS_INCLUDE_DIR}" OR NOT EXISTS "${OPUS_RELEASE_ROOT}" OR NOT EXISTS "${OPUS_DEBUG_ROOT}"
		OR NOT EXISTS "${SODIUM_INCLUDE_DIR}" OR NOT EXISTS "${SODIUM_RELEASE_ROOT}" OR NOT EXISTS "${SODIUM_DEBUG_ROOT}" OR NOT LINUX_OK OR NOT WINDOWS_OK)
		
		message(FATAL_ERROR "Sorry - but please set the _DEBUG_ROOT, _RELEASE_ROOT AND _INCLUDE_DIR values in CMakeLists.txt!")
	endif()
elseif(EXISTS "${VCPKG_ROOT_DIR}")
	include("${VCPKG_ROOT_DIR}/scripts/buildsystems/vcpkg.cmake")
else()
	message(FATAL_ERROR "Please, set the VCPKG base directory, or the location of the DiscordCoreAPIConfig.cmake file!")
endif()

add_subdirectory(Executable)